# Dash_MACI_Olimpiadas

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py  appv2.py
