[project]
name = "dashboard-template"
version = "0.1.0"
description = ""
dependencies = [
    "dash>=2.6.0, <= 3.0",
    "pandas>=1.4.3, < 2.0",
    "dash-bootstrap-components>=1.2.0, < 2.0"
]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"
